Implementação do Alterar Senha.

--- a/templates/settings/settingsChangePasswordListTemplate.html
+++ b/templates/settings/settingsChangePasswordListTemplate.html
@@ -4,13 +4,13 @@
 		<form id="changePassword">
 			<ol>
 				<li>
-					<input type="password" name="senhaAtual" id="senhaAtual" placeholder="Senha atual" />
+					<input type="password" name="senhaAtual" id="senhaAtual" placeholder="Senha atual" value="" />
 				</li>
 				<li>
-					<input type="password" name="novaSenha" id="novaSenha" placeholder="Nova senha" />
+					<input type="password" name="novaSenha" id="novaSenha" placeholder="Nova senha" value="" />
 				</li>
 				<li>
-					<input type="password" name="repetirNovaSenha" id="repetirNovaSenha" placeholder="Repetir nova senha" />
+					<input type="password" name="repetirNovaSenha" id="repetirNovaSenha" placeholder="Repetir nova senha" value="" />
 				</li>
 			</ol>
 		</form>
