Alterações para a versão Beta.

--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -3,7 +3,7 @@
       <div class="product-logo"></div>
 </div>
 <form method="POST" action="#/Home" class="login-box" onsubmit="">
-      <div id="beta"></div>
+      <div id="beta" class="hidden"></div>
       <div id="loadingLogin" style="width: 100%; min-height: 150px;">
             <% if (servers.length > 1) { %>
             <select id="serverURL" name="serverURL" class="login-input" >
