--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -6,7 +6,7 @@
   <div id="page" class="left">
     <header id="pageHeader" class="topHeader">
       <div id="pageMessage"></div>
-      <div style="margin-left: -3px; margin-top: 50px; z-index: 5000;" id="beta"></div>
+      <div style="margin-left: -3px; margin-top: 50px; z-index: 5000;" id="beta" class="hidden"></div>
       <ul class="left topButtons">
         <li><a id="menuButton" href="#" class="menu">Menu</a></li>
       </ul> 
