Melhorias na composição de mensagens.
Verificação do tamanho dos anexos, limite máximo de tamanho e
quantidade máxima de arquivos.

Correção do texto ao encaminhar uma mensagem para outra pessoa.

--- a/templates/mail/composeMessageTemplate.html
+++ b/templates/mail/composeMessageTemplate.html
@@ -111,7 +111,7 @@
 	    	
 	    	<tr id="msgBodyRow detailRow">
 	    		<td class="itemBody detailCol" colspan="2">
-	    			<div id="msgBodyInput" class="messageBodyInput" style="width: 100%;" contenteditable="true"><%=message.getMessageBody(withSignature,msgForwardString)%></div>
+	    			<div id="msgBodyInput" class="messageBodyInput" style="width: 100%;" contenteditable="true"><%=message.getMessageBody(withSignature,msgType,msgOriginal)%></div>
 	    		</td>
 	    	</tr>
 	    </table>
