--- a/css/estilo.css
+++ b/css/estilo.css
@@ -77,13 +77,15 @@ body #menu #personalInfo .personalData #quota .bar span { background: transparen
 /*body #menu dl { height: 100%; }*/
 body #menu dl dt { background-color: #2C2C2C; color: #EFEFEF; height: 20px; padding: 5px; line-height: 20px; font-size: 20px; }
 body #menu dl dd ul li a { height: 32px; color: #CCCCCC; text-decoration: none; display: block; padding: 8px 10px; margin: 0 20px 0 10px; font-weight: bold; }
-body #menu dl dd ul#mainMenu { background-color: #333333; padding: 10px 0; }
+body #menu dl dd ul#mainMenu { background-color: #333333; padding: 10px 0; border: 1px solid #333333; }
 body #menu dl dd ul#mainMenu li.selected { background: transparent url('../imgs/seta.png') no-repeat right 16px; }
 body #menu dl dd ul#mainMenu li.selected a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
 body #menu dl dd ul#mainMenu li:hover a { color: #EFEFEF; border: 1px solid #444444; background-color: #444444; border-radius: 5px 5px 5px 5px; }
 body #menu dl dd ul#mainMenu li.selected:hover a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
+body #menu dl dd ul#mainMenu li { border: 1px solid #333333; }
 body #menu dl dd ul#mainMenu li a span { float: left; margin-left: 55px; height: 32px; line-height: 32px; vertical-align: top; }
-body #menu dl dd ul#mainMenu li a .icon { width: 40px; height: 32px; }
+body #menu dl dd ul#mainMenu li a .icon { width: 60px; height: 52px; position: absolute; margin-left: -10px; margin-top: -10px; }
+body #menu dl dd ul#mainMenu li a .icon:hover { background-size: 60px 52px;  }
 
 .menu-footer {
   background: #FFF;
@@ -109,6 +111,7 @@ body #menu dl dd ul#mainMenu li a .icon { width: 40px; height: 32px; }
   background: url("../imgs/icon-agenda-90x72.png") no-repeat scroll center center;
   background-size: 40px 32px;
 }
+
 .icon-contacts { 
 
   background: url("../imgs/icon-contatos-90x72.png") no-repeat scroll center center;
@@ -643,8 +646,8 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
 }
 .login-input:focus {
   outline: 0;
-/*  color: #FFF;
-  background-color: #F5F5F5;
+  color: #FFF;
+/*  background-color: #F5F5F5;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(255, 255, 255, 0.6);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(255, 255, 255, 0.6);
 */
