--- a/templates/mail/detailMessageTemplate.html
+++ b/templates/mail/detailMessageTemplate.html
@@ -1,6 +1,6 @@
 <% if (messages.length != 0) { %>
 <% _.each(messages, function(message){ %>
-<h2 class="ellipsis50"><span class="subtitle-detail-text"><%=message.getTimeAgo()%></span><%= message.get("msgSubject") %></h2>
+<h2 class="ellipsis50"><span class="subtitle-detail-text"><%=message.getTimeAgo()%> (<%=message.getMessageSize()%>)</span><%= message.get("msgSubject") %></h2>
 <article id="wrapperDetail" class="container">
   <div id="scrollerDetail">
     <table id="messageDetails"> 
