--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,11 +8,11 @@ ul, ol { list-style: none; }
 .clear { clear: both; }
 .hidden { display: none !important; }
 
-body #page { position: relative; height: 100%; width: 100%; background-color: #FFF; z-index: 150; } 
+body #page { position: relative; height: 100%; width: 100%; background-color: #FFF; z-index: 150; box-shadow: 0 0 40px #000; } 
 /*body #page.menuExpanded { margin-left: auto; }
 body.smartphone #page.menuExpanded { margin-left: auto; }*/
 
-body #page .topHeader { position: absolute; height: 53px; width: 100%; top: -53px; background: url("../imgs/icon.png") no-repeat scroll center center #F1F1F1; border-bottom: 1px solid #E5E5E5; }
+body #page .topHeader { position: absolute; height: 53px; width: 100%; top: -53px; background: url("../imgs/icon.png") no-repeat scroll center center #F1F1F1; border-bottom: 1px solid #E5E5E5; box-shadow: 0 -13px 20px #000; }
 body #page .smartphone { position: absolute; height: 53px; width: 100%; top: -53px; background: url("../imgs/icon-logo-top.png") no-repeat scroll center center #F1F1F1; border-bottom: 1px solid #E5E5E5; }
 body #page .topHeader .topButtons li { float: left; }
 body #page .topHeader .topButtons li a { height: 53px; width: 53px; display: block; color: transparent; text-shadow: none; font: 0px/0 a; }
@@ -62,9 +62,9 @@ body #page .searchArea input:focus { border: 1px solid #0088CC; }
 
 
 /** Menu **/
-body #menu { width: 50%; height: 100%; position: absolute; margin-top: -53px; background: url("../imgs/bg.png"); display: none; }
+body #menu { width: 50%; height: 100%; position: absolute; margin-top: -53px; display: none; background-color: #F1F1F1; }
 body #menu.expanded { display: block; }
-body #menu #personalInfo { height: 61px; padding: 10px 10px; border-bottom: 1px solid #2C2C2C }
+body #menu #personalInfo { height: 61px; padding: 10px 10px; background: url("../imgs/bg.png"); }
 .userPicture { float: left; width: 46px; height: 61px; border-radius: 6px 6px 6px 6px; background: url('../imgs/contactPhotoFrameNone.png') center center no-repeat; }
 body #menu #personalInfo .personalData { margin: 0 0 0 56px; height: 61px; color: #FFF; }
 body #menu #personalInfo .personalData span { display: block; }
@@ -78,7 +78,7 @@ body #menu #personalInfo .personalData #quota .bar span { background: transparen
 body #menu dl dt { background-color: #2C2C2C; color: #EFEFEF; height: 20px; padding: 5px; line-height: 20px; font-size: 20px; }
 body #menu dl dd ul li a { height: 32px; color: #CCCCCC; text-decoration: none; display: block; padding: 8px 10px; margin: 0 20px 0 10px; font-weight: bold; }
 body #menu dl dd ul#mainMenu { background-color: #333333; padding: 10px 0; border: 1px solid #333333; }
-body #menu dl dd ul#mainMenu li.selected { background: transparent url('../imgs/seta.png') no-repeat right 16px; }
+body #menu dl dd ul#mainMenu li.selected { background: transparent url('../imgs/seta.png') no-repeat right 16px; z-index: 1000; }
 body #menu dl dd ul#mainMenu li.selected a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
 body #menu dl dd ul#mainMenu li:hover a { color: #EFEFEF; border: 1px solid #444444; background-color: #444444; border-radius: 5px 5px 5px 5px; }
 body #menu dl dd ul#mainMenu li.selected:hover a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
@@ -88,12 +88,13 @@ body #menu dl dd ul#mainMenu li a .icon { width: 60px; height: 52px; position: a
 body #menu dl dd ul#mainMenu li a .icon:hover { background-size: 60px 52px;  }
 
 .menu-footer {
-  background: #FFF;
+  background: #F1F1F1;
   padding-top: 20px;
   padding-bottom: 50px;
   font-size: 10px;
   color: #444444;
   text-align: center;
+  border-top: 2px solid #437DD6;
 }
 
 .icon-email { 
@@ -143,7 +144,7 @@ body #menu dl dd ul#mainMenu li a .icon:hover { background-size: 60px 52px;  }
 body #menu dl dd ul#myFolders li { border-bottom: 1px #EFEFEF solid; }
 body #menu dl dd ul#myFolders li.selected { background-color: #3960A6; }
 body #menu dl dd ul#myFolders li.selected span { color: #FFFFFF; }
-body #menu dl dd ul#myFolders li:hover { background-color: #AFAFAF; }
+body #menu dl dd ul#myFolders li:hover { background-color: #DFDFDF; border-bottom: 1px solid #3960A6; border-top: 1px solid #3960A6; }
 body #menu dl dd ul#myFolders li.selected:hover { background-color: #3960A6; }
 /*body #menu dl dd ul#myFolders li a { height: 32px; text-decoration: none; }*/
 body #menu dl dd ul#myFolders { background-color: #FFF; }
@@ -213,7 +214,7 @@ body #menu dl dd ul#myFolders li a span .badge.badge-info { float: right; }
 
 
 /** Menu de contexto **/
-body #page .topHeader #contextMenu { background-color: #333333; width: 240px; position: absolute; top: 53px; right: 0; z-index: 9999; }
+body #page .topHeader #contextMenu { background-color: #333333; width: 240px; position: absolute; top: 53px; right: 0; z-index: 9999; box-shadow: 10px 10px 5px #888; }
 body #page .topHeader #contextMenu ul li { border-bottom: 1px solid #2C2C2C; }
 body #page .topHeader #contextMenu ul li:hover { background-color: #111111; border-bottom: 1px solid #2C2C2C; }
 body #page .topHeader #contextMenu ul li a { color: #EFEFEF; text-decoration: none; display: block; padding: 15px 10px; width: 200px; }
@@ -752,6 +753,29 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
     height: 40px;
 }
 
+.btn-add-contact-personal {
+  background: url("../imgs/icon-adicionar-contato-pessoal-30x30.png") no-repeat scroll center center;
+  background-color: #006DCC;
+  background-repeat: no-repeat;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: #FFFFFF;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  min-width: 40px;
+  height: 40px;
+}
+
+.btn-delete-contact-personal {
+  background: url("../imgs/icon-excluir-contato-pessoal-30x30.png") no-repeat scroll center center;
+  background-color: #006DCC;
+  background-repeat: no-repeat;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: #FFFFFF;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  min-width: 40px;
+  height: 40px;
+}
+
+
 .btn-add-event {
     background: url("../imgs/icon-adicionar-evento-30x30.png") no-repeat scroll center center;
     background-color: #006DCC;
@@ -905,11 +929,20 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
   background: url("../imgs/logo_expresso.png") no-repeat scroll center center;
 }
 
+
+.product-logo-menu {
+  width: 100%;
+  height: 53px;
+  background: url("../imgs/logo_expresso.png") no-repeat scroll center center #F1F1F1;
+  background-size: 170px 40px;
+  border-bottom: 2px solid #437DD6;
+}
+
 .company-logo {
   width: 100%;
   height: 65px;
   text-align: center;
-  background: url("../imgs/logo_cia_celepar.png") no-repeat scroll center center;
+  background: url("../imgs/logo_cia_celepar.png")  no-repeat scroll center center;
   background-size: 150px 65px;
 }
 
