--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -1,4 +1,5 @@
-<div id="scrollerMenu" class="container">
+<div  class="container">
+  <div class="product-logo-menu"></div>
 
   <div id="personalInfo">
     <div id="userPicture" class="userPicture"></div>
