Alterações de compatibilidade para a versão 1.0 da API.
Caso a versão da API seja a 1.0 e não a 1.1 o aplicativo deverá
desabilitar todas as funções referentes a versão 1.1.

Tornando desta forma a versão mobile compatível com a versão 1.0 da API
que foi lançada para o aplicativo iOS.

--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -4,6 +4,7 @@
 </div>
 <!-- fim menu -->
   <div id="page" class="left">
+    <div id="pageSwipe" style=""></div>
     <header id="pageHeader" class="topHeader">
       <div id="pageMessage"></div>
       <div style="margin-left: -3px; margin-top: 50px; z-index: 5000;" id="beta" class="hidden"></div>
