--- a/templates/home/contextMenuTemplate.html
+++ b/templates/home/contextMenuTemplate.html
@@ -7,7 +7,7 @@
 	  <li><a id="contextMenuButton" href="#" class="contextMenu">Menu de contexto</a></li>
   <% } %>
 </ul>
-<div id="contextMenu" class="hidden">
+<div id="contextMenu" class="hidden shadow">
 	<ul>
 		<% _.each(menuItems, function(menuItem){ %>
 			<% if (!menuItem.get("primary")) { %>
