Melhorias no CHAT
Alteração de status dos contatos para Online ou Offline sem forçar o
recarregamento da página.

--- a/css/chat.css
+++ b/css/chat.css
@@ -28,7 +28,7 @@
 }
 
 .chat-offline {
-  background-color: #990000;
+  background-color: #AFAFAF;
   width: 10px;
   height: 10px;
   border-radius: 5px;
