Adicionado os Créditos de Design e Padrão de Usabilidade.

--- a/templates/settings/settingsCreditsListTemplate.html
+++ b/templates/settings/settingsCreditsListTemplate.html
@@ -31,6 +31,15 @@
 				</ul>
 			</dd>
 
+			<dt>Design e Padrão de Usabilidade</dt>
+			<dd>
+				<ul>
+					<li>Carlos Henrique Roland</li>
+					<li>Jair Gon&ccedil;alves Pereira Jr</li>
+					<li>Rafael Katayama Gobara</li>			
+				</ul>
+			</dd>
+
 			<dt>Biliotecas utilizadas</dt>
 			<dd>
 				<ul>
