--- a/css/estilo.css
+++ b/css/estilo.css
@@ -154,6 +154,16 @@ body #menu dl dd ul#mainMenu li a .icon:hover { background-size: 60px 52px;  }
   background-size: 40px 32px;
 }
 
+.icon-add-attachment { 
+  border-radius: 5px;
+  background: url("../imgs/icon-adicionar-arquivo.png") no-repeat scroll center center;
+  background-size: 50px 50px;
+  float: right;
+  margin-top: 10px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
 
 body #menu dl dd ul#myFolders li { border-bottom: 1px #EFEFEF solid; }
 body #menu dl dd ul#myFolders li.selected { background-color: #3960A6; }
