--- a/css/estilo.css
+++ b/css/estilo.css
@@ -71,7 +71,7 @@ body.smartphone #page .main #contentDetail { display: none; }
 
 /** Busca **/
 body #page .searchArea { margin: 5px; padding: 8px; }
-body #page .searchArea input { width: 93%; border-radius: 15px 15px 15px 15px; min-height: 35px; background-color: #FFFFFF; border: 1px solid #CCCCCC; padding: 0 3%; }
+body #page .searchArea input { width: 93%; border-radius: 5px 5px 5px 5px; min-height: 35px; background-color: #FFFFFF; border: 1px solid #CCCCCC; padding: 0 3%; }
 body #page .searchArea input:focus { border: 1px solid #0088CC; }
 
 
@@ -249,7 +249,7 @@ body form { font-size: 16px; padding: 15px; }
 
   /** Preferências > Alterar senha **/
   body form#changePassword ol li { margin: 15px 25px 15px 15px; }
-  body form#changePassword ol li input { width: 100%; height: 30px; padding: 5px; }
+  body form#changePassword ol li input { width: 100%; height: 30px; padding: 5px; border-radius: 5px; border: 1px solid #CCCCCC; }
 
   /** Preferências > Resultados por página **/
   body #detailList ul { width: 100%; background-color: #FFFFFF; }
@@ -660,7 +660,7 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
   border: 0px solid #333;
   border-top-color: #333;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 5px;
   font-size: 16px;
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
   background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
@@ -689,8 +689,8 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
 
 .login-box {
   margin: 0px auto;
-  padding: 8px;
-  width: 260px;
+  padding: 16px;
+  width: 250px;
   font: 10px/18px 'Lucida Grande', Arial, sans-serif;
   color: #bbb;
   text-align: center;
@@ -1493,8 +1493,8 @@ ul.autocomplete li.selected span.emailInfo {
 
 #beta {
   background:  url("../imgs/beta.png") no-repeat scroll 0 0 transparent; background-position: 0px 0px; 
-  margin-top: -10px;
-  margin-left: -10px;
+  margin-top: -18px;
+  margin-left: -18px;
   position: absolute;
   z-index: 1000;
   width: 50px;
