Implementação inicial do Perguntas Frequentes / Ajuda.

--- a/templates/settings/settingsListTemplate.html
+++ b/templates/settings/settingsListTemplate.html
@@ -45,6 +45,7 @@
 				<ul>
 					<li><a href="/Settings/Support" class="settinsLink">Suporte / Sugest&otilde;es</a></li>
 					<li><a href="/Settings/About" class="settinsLink">Sobre o Expresso</a></li>
+					<li><a href="/Settings/FAQ" class="settinsLink">Perguntas Frequentes</a></li>
 					<li><a href="/Settings/Credits" class="settinsLink">Cr&eacute;ditos</a></li>
 				</ul>
 			</dd>
