Issue #20 - Finalização no Login Automático para Android
Finalizado o Login automático para a plataforma Android, também foi
implementado a troca de contas após o login, caso o usuário tenha mais
de uma conta cadastrada no sistema Android, ele pode selecionar outra
conta e se logar com ela.

--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -21,6 +21,25 @@
 
   <dl>
 
+    <% if (Shared.automaticLoginAccounts.accounts.length >= 2) { %>
+
+    <dt>Alterar Conta</dt>
+    <dd>
+      <ul id="mainMenu">
+      <% _.each(Shared.automaticLoginAccounts.accounts, function(account){ %>
+      <% if (Shared.forceAutomaticLoginInAccountName != account.accountName) { %>
+        <li class="account">
+          <a class="menuLink" href="/Switch/<%=account.accountName%>">
+            <span><%=account.accountName%></span>
+            <div class="userPicture icon"></div>
+          </a>
+        </li>
+      <% } %>
+      <% }); %>
+      </ul>
+    </dd>
+    <% } %>
+
     <dt>Menu</dt>
     <dd>
       <ul id="mainMenu">
