--- a/templates/mail/previewAttachmentMessageTemplate.html
+++ b/templates/mail/previewAttachmentMessageTemplate.html
@@ -9,7 +9,7 @@
     </div>
     <% if (fileType == "base64") { %>
       <div style="position: relative; overflow: hidden;">
-        <img class="attachmentImage" style="position: relative; left: 0px;" src="data:image/jpeg;base64,<%=fileData%>">
+        <img class="attachmentImage" style="position: relative; left: 0px; height: 150px;" src="data:image/jpeg;base64,<%=fileData%>">
       </div>
     <% } %>
 </div>
