--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -24,4 +24,6 @@
 </form>
 <div class="login-center" style="width: 245px; margin-top: 20px;">
       <div class="company-logo"></div>
+
+      <div id="helpLink" class="help">? Ajuda/Perguntas Frequentes</div>
 </div>
